# Python_oop_class

./: README.md  config.py  pyproject.toml
src/: base_product.py  create_class.py  creationloggermixin.py  lawngrass_class.py  main.py  read_json.py  smartphone_class.py
tests/: conftest.py  test_baseproduct.py  test_creationloggermixin.py  test_creete_class.py  test_lawngrass.py  test_read_json.py  test_smartphone_class.py
